Where "NUMBER" is the bug number.

There are always more changes than listed here, these are just the
highlights. The full CVS log is available at www.xchat.org/cvslog/

----------------------------------------------------------------------
 2.6.x - DD/MMM/2006
----------------------------------------------------------------------

 - Updated translations (fi).
 - D-Bus stuff <expand comment> (Claessens Xavier).
 - Python: Fixed "restricted mode" errors on win32 [1512076].
 - Special-cased BRASnet for nickserv.
 - Fixed using the /MENU args -p and -e at the same time.
 - Fixed /reconnect and auto-reconnect issue [1525383].
 - 


----------------------------------------------------------------------
 2.6.6 - 18/Jul/2006
----------------------------------------------------------------------

 - Updated translations (es, fr, sr).
 - Fixed connecting to a IRC server via proxy (bug in 2.6.4 only).
 - Fixed the invisible cursor color when using GTKSpell and a black
   input box (when "Use the text box font & colors" is ON).
 - Allow loading a cert/privatekey file from ~/.xchat2/<NetWorkName>.pem
 - Improved the fallback routine when you receive non-UTF8 messages. It
   can now handle CP1252 from mIRC users and the ISO-8859-15 Euro symbol.
 - Added CHANOPT command for setting channel specific options such as showing
   of joins and part, beep on message and color paste (Lian Wan Situ).
 - /CLEAR HISTORY will clear your command history.
 - Fixed a crash if you left a Ban-List window open after closing the
   associated channel and then clicking Refresh.
 - Added an option of using 'Last-Spoke' nick completion order in Settings >
   Input Box.
 - The /QUERY command now has -nofocus arg, which scripts might find useful.
 - You can now /set gui_url_mod 0, to allow left-clicking URLs (default is
   4, for CTRL).
 - XChat will now respect gtk-button-images=0 set in ~/.gtkrc-2.0.
 - Added a ./configure option to use your preferred spelling library: