@@ -13,12 +13,13 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  2.6.x - DD/MMM/2006
 ----------------------------------------------------------------------
 
- - Updated translations (fi).
+ - Updated translations (fi, ja).
  - D-Bus stuff <expand comment> (Claessens Xavier).
  - Python: Fixed "restricted mode" errors on win32 [1512076].
  - Special-cased BRASnet for nickserv.
  - Fixed using the /MENU args -p and -e at the same time.
  - Fixed /reconnect and auto-reconnect issue [1525383].
+ - Plugin API: Added fields: lag, queue to the "channels" list.
  - 
 
 
